--- a/updates/23nov2021.md
+++ b/updates/23nov2021.md
@@ -6,4 +6,4 @@ Hello! I have been away from this side project for awhile and have been slowly c
 
 I am starting to include more search options within the website. The first area I wanted to focus on was club searching. Now when you drop into the app you should have the ability to start typing in the name of your favorite club and the results will update automatically.
 
-[Search Example](https://github.com/nicbaughman/reddit-goalbot-update/media/gif/reddit-goalbot-search.gif)
+![Search Example](https://github.com/nicbaughman/reddit-goalbot-update/blob/main/media/gif/reddit-goalbot-search.gif)
