finish first post, new link from main page

--- a/updates/23nov2021.md
+++ b/updates/23nov2021.md
@@ -6,4 +6,14 @@ Hello! I have been away from this side project for awhile and have been slowly c
 
 I am starting to include more search options within the website. The first area I wanted to focus on was club searching. Now when you drop into the app you should have the ability to start typing in the name of your favorite club and the results will update automatically.
 
+
 ![Search Example](https://github.com/nicbaughman/reddit-goalbot-update/blob/main/media/gif/reddit-goalbot-search.gif)
+
+
+### Tips
+
+*Set your favorite club:*
+
+There are some new things coming in the future around notifications for your favorite club. This could mean reminders about certain things going on for matchday, notifications when new highlights are updated, etc. Adding your favorite club will make sure you get the notifications that interest you.
+
+![Favorite Club](https://github.com/nicbaughman/reddit-goalbot-update/blob/main/media/images/reddit-goalbot-fav-club.png)
